# 3d-sketches

./: .gitignore  README.md  pyproject.toml  requirements.txt
sketches/: caesar_pendant.py  mobius_ring.py  washing_machine_cabinet.py
sketches/furniture/: washing_machine_cabinet.py
sketches/jewelry/: caesar_pendant.py  mobius_ring.py
sweep-case/: sweep_case.py
