[project]
name = "3d-sketches"
version = "0.1.0"
description = "My sketches for 3d modeling"
authors = [{ name = "Daniele D'Orazio", email = "d.dorazio96@gmail.com" }]
dependencies = [
    "build123d @ git+https://github.com/gumyr/build123d",
    "svgpathtools>=1.6.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ocp-vscode>=2.3.3",
]

[tool.ruff.lint]
# ignore undefined-local-with-import-star and undefined-local-with-import-star-usage,
# it's all star imports with build123d and friends
ignore = ["F403", "F405"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["sketches/"]
